--- a/RESUME.html
+++ b/RESUME.html
@@ -6,11 +6,11 @@
   <title>Your Name - Resume</title>
   <style>
     header {
-      line-height: 0.7; /* Adjust this value to decrease or increase line spacing */
+      line-height: 0.7; 
       
     }
     img {
-      position: absolute;
+      position:fixed;
       top: 0;
       right: 0;
       width: 150px;
@@ -22,6 +22,7 @@
       margin: 20px;
       background-color: lightgoldenrodyellow;
       padding:15px;
+    }
     
     table {
       width: 100%;
@@ -64,7 +65,7 @@
 
   
   <section>
-    <h3>CAREER OBJECTIVE</h2>
+    <h3>CAREER OBJECTIVE</h3>
     <p>To get an opportunity that allows me to showcase my skills and contribute to the company's growth.</p>
   </section>
 
@@ -144,9 +145,8 @@
     <h3>AREA OF INTEREST</h3>
     <ul>
         <li>Power Electronics</li>
-        <li>Electromagnetic Theory</li>
+        <li>EMT</li>
     </ul>
    </section>
-
 </body>
 </html>
